2005-04-22  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-art.el (article-date-ut): Support converting date in
	forwarded parts as well.
	(gnus-article-save-original-date): New function.
	(gnus-display-mime): Use it.

2005-04-22  David Hansen  <david.hansen@physik.fu-berlin.de>

	* nnrss.el (nnrss-check-group, nnrss-request-article): Support the
	enclosure element of <item>.

2005-04-21  Reiner Steib  <Reiner.Steib@gmx.de>

	* message.el (message-kill-buffer-query): Renamed from
	`message-kill-buffer-query-if-modified'.  Added :version.

2005-04-19  Katsumi Yamaoka  <yamaoka@jpl.org>

	* mml.el (mml-preview): Bind gnus-message-buffer while setting the
	window layout.

2005-04-18  Katsumi Yamaoka  <yamaoka@jpl.org>

	* mml.el: Autoload dnd when compiling.

2005-04-18  Reiner Steib  <Reiner.Steib@gmx.de>

	* mml.el (mml-mode, mml-dnd-attach-file): Use dnd-* instead of
	x-dnd-*.

2005-04-18  Katsumi Yamaoka  <yamaoka@jpl.org>

	* qp.el (quoted-printable-encode-region): Save excursion.

2005-04-14  Teodor Zlatanov  <tzz@lifelogs.com>

	* message.el (message-kill-buffer-query-if-modified): new variable
	so the user can kill a modified message buffer quickly
	(message-kill-buffer): use it.

2005-04-13  Katsumi Yamaoka  <yamaoka@jpl.org>

	* lpath.el: Fbind display-time-event-handler; don't fbind
	string-to-multibyte.

	* qp.el (quoted-printable-encode-region): Use mm-string-to-multibyte.

2005-04-12  Katsumi Yamaoka  <yamaoka@jpl.org>

	* nnrss.el (nnrss-node-text): Replace CRLFs (which might be
	contained in text because xml.el decodes entities) with LFs.

2005-04-11  Lute Kamstra  <lute@gnu.org>

	* nnimap.el (nnimap-date-days-ago): Handle byte-compiler warnings
	differently.

2005-04-10  Stefan Monnier  <monnier@iro.umontreal.ca>

	* mm-util.el (mm-detect-coding-region): Typo.

2005-04-11  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-art.el (gnus-article-read-summary-keys): Fix misplaced parens.

2005-04-06  D Goel  <deego@gnufans.org>
